Fixed plan overflow

--- a/src/style.css
+++ b/src/style.css
@@ -144,11 +144,13 @@ h2 {
 
 .main-view__plan {
   position: relative;
-  flex: 1 0 auto;
+  overflow-y: scroll;
+  flex: 0 0 1fr;
 }
 
 .plan-week {
-  height: 100%;
+  min-height: 580px;
+  max-height: fit-content;
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(4, minmax(150px, 200px));
